# mcast-sock-emulator

./: CMakeLists.txt  config.hpp.in
include/: app.hpp  config.hpp  multicastsocket.hpp
src/: app.cpp  multicastsocket.cpp
